[gd_scene load_steps=12 format=2]

[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=1]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://Node2D.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[node name="LoonyLips" type="Node2D"]
script = ExtResource( 5 )

[node name="BlackBoard" type="TextureRect" parent="."]
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 608.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryText" type="RichTextLabel" parent="BlackBoard"]
margin_right = 856.0
margin_bottom = 456.0
custom_fonts/normal_font = SubResource( 1 )
text = "Story Appears Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="LineEdit" parent="BlackBoard"]
anchor_right = 0.016
anchor_bottom = 0.013
margin_left = 24.0
margin_top = 504.0
margin_right = 735.616
margin_bottom = 568.2
custom_fonts/font = SubResource( 2 )
text = "Input Here"

[node name="OkButton" type="TextureButton" parent="BlackBoard"]
margin_left = 784.0
margin_top = 512.0
margin_right = 848.0
margin_bottom = 576.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkLable" type="RichTextLabel" parent="BlackBoard/OkButton"]
margin_left = 72.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 3 )
text = "OK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgainButton" type="TextureButton" parent="BlackBoard"]
margin_left = 784.0
margin_top = 512.0
margin_right = 848.0
margin_bottom = 576.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgainLabel" type="RichTextLabel" parent="BlackBoard/AgainButton"]
margin_left = 80.0
margin_top = 8.0
margin_right = 224.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 4 )
text = "Again!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressCounter" type="ProgressBar" parent="BlackBoard"]
margin_left = 864.0
margin_top = 64.0
margin_right = 992.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressLabel" type="RichTextLabel" parent="BlackBoard/ProgressCounter"]
margin_top = -48.0
margin_right = 136.0
custom_fonts/normal_font = SubResource( 6 )
text = "Progress:"
[connection signal="text_entered" from="BlackBoard/TextBox" to="." method="_on_TextBox_text_entered"]
[connection signal="pressed" from="BlackBoard/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="BlackBoard/AgainButton" to="." method="_on_AgainButton_pressed"]
[connection signal="ready" from="BlackBoard/ProgressCounter" to="." method="_on_ProgressCounter_ready"]
